--- a/Irregular-occ/references.bib
+++ b/Irregular-occ/references.bib
@@ -463,6 +463,19 @@ month={Jul},
 pages={26}
 }
 
+@article{Desmars2013,
+title={Phoebe’s orbit from ground-based and space-based observations},
+volume={553},
+url={http://dx.doi.org/10.1051/0004-6361/201321114},
+DOI={10.1051/0004-6361/201321114},
+journal={Astronomy \& Astrophysics},
+publisher={EDP Sciences},
+author={Desmars, J. and Li, S. N. and Tajeddine, R. and Peng, Q. Y. and Tang, Z. H.},
+year={2013},
+month={Apr},
+pages={A36}
+}
+
 @article{Camargo2014,
 title={Candidate stellar occultations by Centaurs and trans-Neptunian objects up to 2014},
 volume={561},
@@ -515,4 +528,25 @@ author={A. R. Gomes-Júnior and M. Assafin and R. Vieira-Martins and J.-E. Arlot
 year={2015},
 month={Jun},
 notes={accepted}
+}
+
+@article{Peng2015,
+title={Precise CCD positions of Phoebe in 2011-2014},
+volume={449},
+url={http://dx.doi.org/10.1093/mnras/stv469},
+DOI={10.1093/mnras/stv469},
+number={3},
+journal={Monthly Notices of the Royal Astronomical Society},
+publisher={Oxford University Press (OUP)},
+author={Peng, Q. Y. and Wang, N. and Vienne, A. and Zhang, Q. F. and Li, Z. and Meng, X. H.},
+year={2015},
+month={Apr},
+pages={2638–2642}
+}
+
+@MISC{NOFS,
+author = {{U.S.N.O}} ,
+title = {Flagstaff Astrometric Scanning Transit Telescope Planet and Planetary Satellite Observations},
+year = 2015,
+note= {\url{http://www.nofs.navy.mil/data/plansat.html}}
 }
