--- a/Irregular-occ/references.bib
+++ b/Irregular-occ/references.bib
@@ -300,13 +300,26 @@ year={2007},
 pages={483–502}
 }
 
+@misc{Emelyanov2007,
+title={Updated ephemeris of Phoebe, ninth satellite of Saturn},
+volume={473},
+url={http://dx.doi.org/10.1051/0004-6361:20077920},
+DOI={10.1051/0004-6361:20077920},
+number={1},
+journal={Astronomy and Astrophysics},
+publisher={EDP Sciences},
+author={Emelyanov, N. V.},
+year={2007},
+month={Oct},
+pages={343–346}
+}
+
 @inbook{Barucci2008,
 author = {Barucci, M Antonietta and Brown, Michael E and Emery, Joshua P},
-editor = {{Barucci}, M.~A. and {Boehnhardt}, H. and {Cruikshank}, D.~P. and 	{Morbidelli}, A. and {Dotson}, R.},
-journal = {The Solar System Beyond Neptune},
+booktitle = {The Solar System Beyond Neptune},
 pages = {143--160},
 title = {{Composition and Surface Properties of Transneptunian Objects and Centaurs}},
-booktitle = {The Solar System Beyond Neptune},
+publisher = {{Barucci}, M.~A. and {Boehnhardt}, H. and {Cruikshank}, D.~P. and {Morbidelli}, A. and {Dotson}, R.},
 url = {http://adsabs.harvard.edu/abs/2008ssbn.book..143B},
 year = {2008}
 }
@@ -323,6 +336,20 @@ author={Peng, Q.Y. and Vienne, A. and Lainey, V. and Noyelles, B.},
 year={2008},
 month={Nov},
 pages={1807–1811}
+}
+
+@article{Emelyanov2008,
+title={The natural satellites ephemerides facility MULTI-SAT},
+volume={487},
+url={http://dx.doi.org/10.1051/0004-6361:200809790},
+DOI={10.1051/0004-6361:200809790},
+number={2},
+journal={Astronomy and Astrophysics},
+publisher={EDP Sciences},
+author={Emel’yanov, N. V. and Arlot, J.-E.},
+year={2008},
+month={Aug},
+pages={759–765}
 }
 
 @article{Assafin2010,
@@ -378,6 +405,19 @@ author={Sicardy, B. and Ortiz, J. L. and Assafin, M. and Jehin, E. and Maury, A.
 year={2011},
 month={Oct},
 pages={493–496}
+}
+
+@article{Emelyanov2011,
+title={The orbit of Nereid based on observations},
+volume={417},
+url={http://dx.doi.org/10.1111/j.1365-2966.2011.19282.x},
+DOI={10.1111/j.1365-2966.2011.19282.x},
+number={1},
+journal={Monthly Notices of the Royal Astronomical Society},
+publisher={Oxford University Press (OUP)},
+author={Emelyanov, N. V. and Arlot, J.-E.}, year={2011},
+month={Aug},
+pages={458–463}
 }
 
 @article{Ortiz2012,
@@ -517,6 +557,19 @@ month={Feb},
 pages={22}
 }
 
+@article{Zhang2013,
+title={An orbital determination of Triton with the use of a revised pole model},
+volume={438},
+url={http://dx.doi.org/10.1093/mnras/stt2304},
+DOI={10.1093/mnras/stt2304},
+number={2},
+journal={Monthly Notices of the Royal Astronomical Society},
+publisher={Oxford University Press (OUP)},
+author={Zhang, H. Y. and Shen, K. X. and Dourneau, G. and Harper, D. and Qiao, R. C. and Xi, X. J. and Cheng, X. and Yan, D. and Li, S. N. and Wang, S. H.},
+year={2013},
+month={Dec},
+pages={1663–1668}
+}
 
 @article{GomesJunior2015,
 title={Astrometric positions for 18 irregular satellites of giant planets from 23 years of observations},
@@ -542,6 +595,20 @@ author={Peng, Q. Y. and Wang, N. and Vienne, A. and Zhang, Q. F. and Li, Z. and 
 year={2015},
 month={Apr},
 pages={2638–2642}
+}
+
+@misc{Emelyanov2015,
+title={Analytical theory of motion and new ephemeris of Triton from observations},
+volume={454},
+url={http://dx.doi.org/10.1093/mnras/stv2116},
+DOI={10.1093/mnras/stv2116},
+number={2},
+journal={Mon. Not. R. Astron. Soc.},
+publisher={Oxford University Press (OUP)},
+author={Emelyanov, N. V. and Samorodov, M. Yu.},
+year={2015},
+month={Oct},
+pages={2205–2215}
 }
 
 @MISC{NOFS,
