--- a/Irregular-occ/references.bib
+++ b/Irregular-occ/references.bib
@@ -352,6 +352,20 @@ month={Aug},
 pages={759–765}
 }
 
+@article{Jacobson2009,
+title={THE ORBITS OF THE NEPTUNIAN SATELLITES AND THE ORIENTATION OF THE POLE OF NEPTUNE},
+volume={137},
+url={http://dx.doi.org/10.1088/0004-6256/137/5/4322},
+DOI={10.1088/0004-6256/137/5/4322},
+number={5},
+journal={The Astronomical Journal},
+publisher={IOP Publishing},
+author={Jacobson, R. A.},
+year={2009},
+month={Apr},
+pages={4322–4329}
+}
+
 @article{Assafin2010,
 title={Precise predictions of stellar occultations by Pluto, Charon, Nix, and Hydra for 2008–2015},
 volume={515},
@@ -557,7 +571,7 @@ month={Feb},
 pages={22}
 }
 
-@article{Zhang2013,
+@article{Zhang2014,
 title={An orbital determination of Triton with the use of a revised pole model},
 volume={438},
 url={http://dx.doi.org/10.1093/mnras/stt2304},
@@ -566,7 +580,7 @@ number={2},
 journal={Monthly Notices of the Royal Astronomical Society},
 publisher={Oxford University Press (OUP)},
 author={Zhang, H. Y. and Shen, K. X. and Dourneau, G. and Harper, D. and Qiao, R. C. and Xi, X. J. and Cheng, X. and Yan, D. and Li, S. N. and Wang, S. H.},
-year={2013},
+year={2014},
 month={Dec},
 pages={1663–1668}
 }
